Switch some files to Synlinks. Setup base group_vars for MRC and Centralized. Updates for Centralized support.

--- a/resources/group_vars/all/base.yml
+++ b/resources/group_vars/all/base.yml
@@ -65,3 +65,5 @@ control_center_custom_properties: {}
 #Schema Registry Overrides
 schema_registry_custom_properties: {}
   # master.eligibility: 'true'
+
+hostname_aliasing_enabled: true
